exercise2 multiple inputs agent

--- a/Hello_World.ipynb
+++ b/Hello_World.ipynb
@@ -21,13 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4d4ccd83",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# This is the state of the node the way it will store data\n",
+    "\n",
+    "# The class named AgentState is an State Schema\n",
     "class AgentState(TypedDict):\n",
     "    message:str\n",
     "\n",
